--- a/web/index.html
+++ b/web/index.html
@@ -17,8 +17,8 @@
     </style>
   </head>
   <body>
-    <redoc spec-url="./api.json">
+    <redoc spec-url="./swagger.json">
     </redoc>
-    <script src="//rebilly.github.io/ReDoc/releases/v1.x.x/redoc.min.js"> </script>
+    <script src="https://cdn.jsdelivr.net/npm/redoc@next/bundles/redoc.standalone.js"> </script
   </body>
 </html>
